--- a/Test2 copy.html
+++ b/Test2 copy.html
@@ -3,10 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soma</title>
+    <title>Soma de valores quaisquer</title>
 </head>
 <body>
     <h1>SOMANDO VALORES</h1>
 
+    <input type="number" name="v1" id="v1"> +
+    <input type="number" name="v2" id="v2">
+    <input type="button" value="soma" onclick="somar()">
+    <div id="res">
+        Resultado
+    </div>
+
+    <script>
+        function somar() {
+            var num1 = window.document.getElementById('v1')
+            var num2 = window.document.getElementById('v2')
+            var res = window.document.getElementById('res')
+            var n1 = Number(num1.value)
+            var n2 = Number(num2.value)
+            var s = n1 + n2
+            res.innerHTML = s
+        }
+
+    </script>
 </body>
 </html>
