--- a/aula14ex/ex017 copy/ex017.html
+++ b/aula14ex/ex017 copy/ex017.html
@@ -4,17 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ex017</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1></h1>
     </header>
+
     <section>
-        <div></div>
-        <div></div>
+        <div>Número: <input type="number" name="valor" id="v1">
+        <input type="button" value="Gerar Tabuada" onclick="clique()"></div>
+        <!-- <div><iframe src="pgTabela.html" frameborder="1" id="">
+            Seu navegador não compatível...</iframe></div> -->
+        <div id="div2">
+            <p>Digite um número acima</p>
+        </div>
     </section>
+
     <footer>
         <p>&copy; CursoemVideo</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
