--- a/aula14ex/ex016/ex016.html
+++ b/aula14ex/ex016/ex016.html
@@ -4,17 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ex016</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1></h1>
+        <h1>Vamos contar</h1>
     </header>
     <section>
-        <div></div>
-        <div></div>
+        <div id="dados">
+            <p>Início: <input type="number" name="inicio" id="txti"></p>
+            <p>Fim: <input type="number" name="fim" id="txtf"></p>
+            <p>Passo: <input type="number" name="passo" id="txtp"></p>
+            <p><input type="button" value="contar" onclick="contar()"></p>
+        </div>
+        <div id="res">
+            Preparando a resposta...
+        </div>
     </section>
     <footer>
         <p>&copy; CursoemVideo</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
