--- a/aula14ex/ex017/ex017.html
+++ b/aula14ex/ex017/ex017.html
@@ -4,17 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ex017</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1></h1>
+        <h1>Tabuado</h1>
     </header>
     <section>
-        <div></div>
-        <div></div>
+        <div>
+            <input type="number" name="num" id="txtn">
+            <input type="button" value="Gerar Tabuada" onclick="tabuada()">
+        </div>
+        <div>
+            <select name="tabuada" id="seltab"> 
+                <option>Digite um numero...</option>
+            </select>
+        </div>
     </section>
     <footer>
         <p>&copy; CursoemVideo</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
